package com.fachada.cagepa.fachadacagepa.domain.application.dtos;

public record ConsumoHidrometroDTO(
        String idHidrometro,
        int consumoM3
) { }

